Fix up content link whitespace

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -22,3 +22,7 @@
   border-radius: 0;
   box-shadow: none;
 }
+
+.block-p:not(:last-child) {
+  padding-bottom: 1.5rem;
+}
